--- a/07_セグメンテーション.ipynb
+++ b/07_セグメンテーション.ipynb
@@ -10,11 +10,7 @@
     "\n",
     "手法としては、Semantic Segmentation（SegNet)と呼ばれるアルゴリズムを使用する。\n",
     "\n",
-    "その他にも、U-netと呼ばれるアルゴリズムも存在する。\n",
-    "\n",
-    "<img src=\"images/segmentation.png\">\n",
-    "\n",
-    "引用：http://jamie.shotton.org/work/research.html"
+    "その他にも、U-netと呼ばれるアルゴリズムも存在する。"
    ]
   },
   {
@@ -349,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
