講座読み時の修正

--- a/03_CNN基本.ipynb
+++ b/03_CNN基本.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "## 処理の流れ\n",
     "+ **入力層**：入力ベクトル(画像など)を入力する\n",
-    "+ **特徴抽出**：入力ベクトルから、そのベクトルを象徴するようなベクトルに変換する\n",
+    "+ **特徴抽出層**：入力ベクトルから、そのベクトルを象徴するようなベクトルに変換する\n",
     "    + **畳み込み層**\n",
     "    + **プーリング層**\n",
     "+ **フラット層**：高次元ベクトルを1次元ベクトルに変更する\n",
@@ -23,23 +23,17 @@
     "+ **出力層**：分類結果を出力する\n",
     "\n",
     "## 処理イメージ\n",
-    "### 引用：https://kenyu-life.com/2019/03/07/convolutional_neural_network/\n",
-    "+ 全体\n",
+    "\n",
     "<img src=\"./images/CNN_sample.jpg\" width=\"80%\">\n",
-    "+ 畳み込み層\n",
-    "    + 1次元(グレースケール)\n",
-    "<img src=\"./images/CNN_conv.gif\" width=\"60%\">\n",
-    "    + 3次元(RGB)\n",
-    "<img src=\"./images/CNN_conv_3D.gif\" width=\"60%\">\n",
-    "+ プーリング層\n",
-    "<img src=\"./images/CNN_pooling.gif\" width=\"60%\">"
+    "\n",
+    "**引用：https://kenyu-life.com/2019/03/07/convolutional_neural_network/**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CNNで扱う問題\n",
+    "# 画像認識で扱う問題\n",
     "\n",
     "大きく分けて下記のものがあります。この講座では、分類問題を扱ってみます。\n",
     "\n",
@@ -305,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# データの正規化\n",
@@ -321,9 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# CNNに使用するためにデータを変形(グレースケール)\n",
@@ -334,9 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ベクトルからone hotに変換する\n",
@@ -355,9 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 必要なライブラリのインポート\n",
@@ -370,9 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 基本モデル作成\n",
@@ -437,9 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# モデルの学習設定\n",
