--- a/04_大規模学習済みモデルの利用.ipynb
+++ b/04_大規模学習済みモデルの利用.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 大規模学習済みモデル\n",
+    "\n",
+    "第3回の「CNNの基本」の講座では、60000枚の手書き数字の画像を用いて、学習を行いましたが、世の中には、数字だけでなく、人・動物・植物・機械など様々な画像があります。それらすべてを個人で、一から学習させるのは現実的ではありません。そこで、Kerasなどの有名な機械学習ライブラリは、すでに大量の画像で学習させたモデルがデフォルトで備わっています。そのようなモデルを利用することで、個人レベルでは、本来実現できないような、高精度な解析が可能です。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# ImageNet\n",
     "\n",
     "ImageNetは画像認識用データセットです。\n",
@@ -17,15 +26,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 転移学習\n",
-    "\n",
-    "ファインチューニング(fine tuning)とも呼ばれ、既存のモデルの一部を再利用して、新しいモデルを構築する手法。\n",
-    "\n",
     "Kerasが所有する学習済みモデルは、全てがImageNetを学習用データセットとして使用しています。\n",
     "\n",
     "|モデル名|学習データ|Default入力ベクトルサイズ|ライセンス|\n",
     "|:---|:---|:---|:---|\n",
-    "|Xception|ImageNet|299×29|MIT|\n",
+    "|Xception|ImageNet|299×299|MIT|\n",
     "|VGG16|ImageNet|224×224|CC|\n",
     "|VGG19|ImageNet|224×224|CC|\n",
     "|ResNet50|ImageNet|224×224|MIT|\n",
@@ -55,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
