--- a/08_敵対的生成モデル(GAN).ipynb
+++ b/08_敵対的生成モデル(GAN).ipynb
@@ -1585,6 +1585,14 @@
     "# 学習過程の出力\n",
     "plotLoss()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 80回学習後の生成画像\n",
+    "<img src=\"./images/gan_generated_image_epoch_80.png\"  width=\"80%\" style=\"position:relative;left:-10%;\">"
+   ]
   }
  ],
  "metadata": {
