--- a/06_検出.ipynb
+++ b/06_検出.ipynb
@@ -7,23 +7,27 @@
     "# 検出\n",
     "\n",
     "任意の物体が存在する領域を識別する\n",
-    "<img src=\"./images/detection.png\" width=\"20%\" style=\"position:relative;left:-40%;\">"
+    "<img src=\"./images/detection.png\" width=\"20%\" style=\"position:relative;left:-40%;\">\n",
+    "\n",
+    "### 作業の流れ\n",
+    "+ ①バウンディングボックスをXMLファイルから、取得する関数を作成\n",
+    "+ ②取得したバウンディングボックスを画像に描画する関数を作成\n",
+    "+ ③学習用データ生成のジェネレータを作成する\n",
+    "+ ④モデルを作成し、学習する"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ①画像にバウンディングボックスを描画してみる。\n",
-    "＊　バウンディングボックス：図形をちょうど囲うのに必要な大きさの，四角い箱 （矩形）のこと"
+    "### 画像にバウンディングボックスを描画してみる。\n",
+    "＊　バウンディングボックス：任意の物体が存在する領域を囲う四角い箱 （矩形）のこと"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -52,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def getBB(file):\n",
@@ -62,7 +64,9 @@
     "    引数：\n",
     "    　file：ファイル名\n",
     "    返り値：\n",
+    "    　four_corners：四隅の座標\n",
     "    処理概要：\n",
+    "    　XMLファイルを読み込み、四隅の座標を取得する\n",
     "    \"\"\"\n",
     "    # xmlのファイル取得\n",
     "    path = f'data/pet/annotations/xmls/{file}'\n",
@@ -84,7 +88,7 @@
     "def drawBB(file):\n",
     "    \"\"\"画像にバウンディングボックスを描画する\n",
     "    引数：\n",
-    "    　file：\n",
+    "    　file：ファイル名\n",
     "    返り値：\n",
     "    処理概要：\n",
     "    　getBBで四隅の座標を取得して、選択した画像に描画し出力する\n",
@@ -134,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ②学習用データ生成のジェネレータを作成する\n",
+    "### 学習用データ生成のジェネレータを作成する\n",
     "\n",
     "ニューラルネットでのバッチ処理の際に再利用するため、ジェネレータ関数として定義する。"
    ]
@@ -142,21 +146,20 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def image_generator(all_files, batch_size = 32, optional_size_xy = (256, 256)):\n",
-    "    \"\"\"画像を任意の枚数と任意の大きさで出力する\n",
+    "def image_generator(all_files, batch_size , optional_size_xy):\n",
+    "    \"\"\"NNに必要な画像とバウンディングボックスの座標を返す\n",
     "    引数：\n",
     "    　all_files：全ファイル名のリスト\n",
     "    　batch_size：バッチサイズ（取得したい画像の任意の枚数）\n",
-    "    　optional_size：リサイズしたい画像の大きさ\n",
+    "    　optional_size_xy：リサイズしたい画像の大きさ\n",
     "    返り値：\n",
     "    　ジェネレーター\n",
     "    処理概要：\n",
-    "    　画像とバウンディングボックスの座標をジェネレータで生成する。\n",
+    "    　画像を任意の大きさに変換し、その画像のバウンディングボックス\n",
+    "    　も共に返すジェネレータ\n",
     "    \"\"\"\n",
     "    while True:\n",
     "        # 任意のバッチサイズ分の画像を取得\n",
@@ -177,12 +180,12 @@
     "            # 任意のサイズにリサイズ\n",
     "            img = img.resize(optional_size_xy)\n",
     "            \n",
+    "            # 画像データのnumpy配列化 & 0~1に収める\n",
+    "            img = np.array(img).astype('float32')/255# ニューラルネットは入力ベクトルを0~1までに抑えなければならない(RGBの最高値で割る)\n",
+    "            \n",
     "            # バウンディングボックスの四隅の座標を取得する\n",
     "            (xmin, ymin), (xmax, ymax) = getBB(file)\n",
     "            box = np.array([xmin/w, ymin/h, xmax/w, ymax/h])# ニューラルネットは入力ベクトルを0~1までに抑えなければならない(元々取得していた画像サイズで割る)\n",
-    "            \n",
-    "            # 画像データのnumpy配列化\n",
-    "            img = np.array(img).astype('float32')/255# ニューラルネットは入力ベクトルを0~1までに抑えなければならない(RGBの最高値で割る)\n",
     "            \n",
     "            # 追加\n",
     "            batch_x.append(img)\n",
@@ -199,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ファイル一覧取得\n",
@@ -261,40 +262,6 @@
     "box = [int(optional_size *i) for i in y[0]]\n",
     "cv2.rectangle(img, (box[0], box[1]), (box[2], box[3]), (0,255,0), 2)\n",
     "plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 評価関数の作成\n",
-    "\n",
-    "実際のバウンディングボックスの面積(A)と、予測されたバウンディングボックスの面積(B)のAに対する重なり具合を最小にすることを考える"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def original_eval(boxA, boxB):\n",
-    "    \"\"\"バウンディングボックスの面積の重なり具合を求める。\n",
-    "    引数：\n",
-    "    　boxA：バウンディングボックスA（ここでは、元のBB）\n",
-    "    　boxB：バウンディングボックスB（ここでは、予測したBB）\n",
-    "    \"\"\"\n",
-    "    xA = np.maximum(boxA[:, 0], boxB[:, 0])\n",
-    "    yA = np.maximum(boxA[:, 1], boxB[:, 1])\n",
-    "    xB = np.minimum(boxA[:, 2], boxB[:, 2])\n",
-    "    yB = np.minimum(boxA[:, 3], boxB[:, 3])\n",
-    "    interArea = np.maximum(0, xB - xA + 1) * np.maximum(0, yB - yA + 1)\n",
-    "    boxAArea = (boxA[:, 2] - boxA[:, 0] + 1) * (boxA[:, 3] - boxA[:, 1] + 1)\n",
-    "    boxBArea = (boxB[:, 2] - boxB[:, 0] + 1) * (boxB[:, 3] - boxB[:, 1] + 1)\n",
-    "    unionArea = (boxAArea + boxBArea - interArea)\n",
-    "    return tf.reduce_mean(np.mean(interArea / unionArea))"
    ]
   },
   {
@@ -378,7 +345,6 @@
     "model.compile(\n",
     "    loss=losses.mean_squared_error,\n",
     "    optimizer=optimizers.Adam(lr=0.01),\n",
-    "    #metrics=[original_eval]\n",
     ")\n",
     "\n",
     "train_steps = len(train_files) //batch_size\n",
