--- a/07_セグメンテーション.ipynb
+++ b/07_セグメンテーション.ipynb
@@ -8,6 +8,17 @@
     "\n",
     "画像の1ピクセルごとの領域が、どんな物体に関連する領域かをラベル付けする。\n",
     "\n",
+    "### 使用データ\n",
+    "\n",
+    "元画像\n",
+    "データ\n",
+    "\n",
+    "元URL：http://brainiac2.mit.edu/isbi_challenge/\n",
+    "<img src=\"./images/seg1.png\" width=\"20%\" style=\"position:relative;left:-40%;\">\n",
+    "<br>\n",
+    "セグメント画像(マスク画像)\n",
+    "<img src=\"./images/seg2.png\" width=\"20%\" style=\"position:relative;left:-40%;\">\n",
+    "\n",
     "## 手法\n",
     "### SegNet\n",
     "\n",
@@ -23,19 +34,22 @@
     "医用画像で効果を発揮。\n",
     "<img src=\"./images/u-net.png\" width=\"80%\" style=\"position:relative;left:-10%;\">\n",
     "\n",
-    "### 使用データ\n",
-    "\n",
-    "元画像\n",
-    "<img src=\"./images/seg1.png\" width=\"20%\" style=\"position:relative;left:-40%;\">\n",
-    "<br>\n",
-    "セグメント画像\n",
-    "<img src=\"./images/seg2.png\" width=\"20%\" style=\"position:relative;left:-40%;\">\n",
-    "\n",
-    "データ元URL：http://brainiac2.mit.edu/isbi_challenge/\n",
-    "\n",
     "### 備考：便利なUnetの学習済みモデル\n",
     "\n",
     "https://github.com/divamgupta/image-segmentation-keras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作業の流れ\n",
+    "+ ①データ拡張を行いながら、画像とマスク画像を入力ベクトルに変換後に返すジェネレータを作成する。（訓練データ用）\n",
+    "+ ②UNetのモデルを定義する。\n",
+    "+ ③学習設定を行い、学習させる。\n",
+    "+ ④画像を入力ベクトルに変換後に返すジェネレータを作成する。（テストデータ用）\n",
+    "+ ⑤ニューラルネットの予測値から、マスク画像を生成する関数を作成する。\n",
+    "+ ⑥テスト画像をモデルに入れて、予測値を求め、マスク後画像を作成する。"
    ]
   },
   {
@@ -64,6 +78,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ①データ拡張を行いながら、画像とマスク画像を入力ベクトルに変換後に返すジェネレータを作成する。（訓練データ用）\n",
+    "\n",
+    "データ拡張とは、画像認識には、大量の画像が必要だが、集めるのには労力がかかるため、既存の画像を疑似的に増やし、学習に用いる画像枚数を底上げしている。\n",
+    "\n",
+    "疑似的に増やす：回転・拡大縮小・ゆがめるなどの処理を自動的に行なってくれる"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -76,7 +101,7 @@
     "    返り値：\n",
     "    　処理後の元画像とマスク画像\n",
     "    処理概要：\n",
-    "    　元画像/マスク画像の拡張後元画像を返す。\n",
+    "    　元画像/マスク画像の拡張後を返す。\n",
     "    \"\"\"\n",
     "    # データ拡張クラスに渡すパラメータ（データを増やしてくれる）\n",
     "    data_gen_args = dict(\n",
@@ -131,6 +156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ②UNetのモデルを定義する。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -179,9 +211,24 @@
     "    conv5 = Conv2D(1024, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool4)\n",
     "    conv5 = Conv2D(1024, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv5)\n",
     "    drop5 = Dropout(0.5)(conv5)\n",
-    "    up6 = Conv2D(512, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(drop5))\n",
+    "    up6 = Conv2D(\n",
+    "        512, \n",
+    "        2, \n",
+    "        activation = 'relu', \n",
+    "        padding = 'same', \n",
+    "        kernel_initializer = 'he_normal'\n",
+    "    )(\n",
+    "        UpSampling2D(\n",
+    "            size = (2,2)\n",
+    "        )(\n",
+    "            drop5\n",
+    "        )\n",
+    "    )\n",
     "    # セグメント6\n",
-    "    merge6 = concatenate([drop4, up6], axis = 3)\n",
+    "    merge6 = concatenate(\n",
+    "        [drop4, up6], \n",
+    "        axis = 3\n",
+    "    )\n",
     "    conv6 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(merge6)\n",
     "    conv6 = Conv2D(512, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv6)\n",
     "    up7 = Conv2D(256, 2, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(UpSampling2D(size = (2,2))(conv6))\n",
@@ -213,6 +260,13 @@
     "    \n",
     "    # モデル返す\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ③学習設定を行い、学習させる。"
    ]
   },
   {
@@ -264,6 +318,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ④画像を入力ベクトルに変換後に返すジェネレータを作成する。（テストデータ用）\n",
+    "\n",
+    "### ⑤ニューラルネットの予測値から、マスク画像を生成する関数を作成する。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -301,7 +364,7 @@
     "def saveResult(results):\n",
     "    \"\"\"予測値からマスク後画像を生成し、保存する\n",
     "    引数：\n",
-    "    　results：ニューラルネットの予測値\n",
+    "    　results：ニューラルネットの予測値（複数枚分）\n",
     "    返り値：\n",
     "    　\n",
     "    処理概要：\n",
@@ -315,6 +378,13 @@
     "            os.path.join(\"data/membrane/test/%d_predict.png\"%i),\n",
     "            img\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ⑥テスト画像をモデルに入れて、予測値を求め、マスク後画像を作成する。"
    ]
   },
   {
