--- a/08_敵対的生成モデル(GAN).ipynb
+++ b/08_敵対的生成モデル(GAN).ipynb
@@ -13,10 +13,47 @@
     "よく例えられるのが、**「偽札と偽札判別機」**　です。\n",
     "2つのニューラルネットワークを生成し、それぞれ成長していきます。\n",
     "\n",
-    "+ ジェネレーター（generator）：偽物を作ります。\n",
-    "+ ディスクリミネータ（discriminator）：偽物を見破ります。\n",
+    "+ ジェネレーター（generator）：偽札を作ります。\n",
+    "+ ディスクリミネータ（discriminator）：偽札を見破ります。（偽札判別機）\n",
     "\n",
-    "＊画像認識の場面でよく用いられるので、勘違いされがちですが、CNNのような2次元構造ではなく、ジェネレーターもディスクリミネータも通常のニューラルネットです。"
+    "＊画像認識の場面でよく用いられるので、勘違いされがちですが、CNNのような2次元構造ではなく、ジェネレーターもディスクリミネータも通常のニューラルネットです。\n",
+    "\n",
+    "### GANで出来る事\n",
+    "下記の画像は、一見、手書き数字のようですが、これは、ニューラルネットが自ら生成した画像です。\n",
+    "<img src=\"./images/gan_generated_image_epoch_80.png\"  width=\"30%\" style=\"position:relative;left:-35%;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 学習の流れ\n",
+    "\n",
+    "<img src=\"./images/gan.png\"  width=\"80%\" style=\"position:relative;left:-10%;\">\n",
+    "\n",
+    "ジェネレータとディスクリミネータを「敵対的に」学習させていきます。\n",
+    "\n",
+    "## 学習順序\n",
+    "\n",
+    "### 1.本物のお札と偽物のお札を用意します\n",
+    "+ 実際のデータのベクトル：正解ラベルを1とする\n",
+    "+ ランダムなベクトルを生成し、ジェネレータに渡し、生成した偽ベクトル：正解ラベルを0とする\n",
+    "\n",
+    "### 2.上記2つのベクトルを用いて、ディスクリミネータを学習させる\n",
+    "\n",
+    "**→ディスクリミネータが、本物のお札と偽札を見分けられるようになります。**\n",
+    "\n",
+    "### 3.ディスクリミネータの学習を無効にする\n",
+    "\n",
+    "### 4.ランダムなベクトル：正解ラベルを1とする\n",
+    "\n",
+    "### 5.GANの入力ベクトルとして、4で生成したベクトルを渡し、ジェネレータを学習させる\n",
+    "\n",
+    "+ **ディスクリミネータは、「ジェネレータが生成したベクトル（偽物のお札）」に対しては、0を出力するように学習している。**\n",
+    "\n",
+    "+ **ディスクリミネータは、「実際のベクトル（本物のお札）」に対しては、1を出力するように学習している。**\n",
+    "\n",
+    "+ **4.で生成したベクトルの正解ラベルは1に設定してあるので、ジェネレータは、ディスクリミネータが「実際のデータのベクトル（本物のお札）」が入力されたと勘違いするように偽データを生み出します。**"
    ]
   },
   {
@@ -77,23 +114,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 重み更新法"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adam = optimizers.Adam(lr=0.0002, beta_1=0.5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ジェネレータ―の生成"
+    "## ジェネレータ―の生成\n",
+    "\n",
+    "+ 入力：100(ランダムな数値の入力ベクトル)\n",
+    "\n",
+    "+ 出力：784(28×28の画像をフラット化させたベクトル)"
    ]
   },
   {
@@ -110,14 +135,20 @@
     "generator.add(Dense(1024))\n",
     "generator.add(LeakyReLU(0.2))\n",
     "generator.add(Dense(784, activation='tanh'))\n",
-    "generator.compile(loss=losses.binary_crossentropy, optimizer=adam)"
+    "generator.compile(\n",
+    "    loss=losses.binary_crossentropy, \n",
+    "    optimizer=optimizers.Adam(lr=0.0002, beta_1=0.5)\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ディスクリミネータの生成"
+    "## ディスクリミネータの生成\n",
+    "\n",
+    "+ 入力：784(28×28の画像をフラット化させたベクトル)\n",
+    "+ 出力：1（画像が正規のデータか否か）"
    ]
   },
   {
@@ -137,14 +168,18 @@
     "discriminator.add(LeakyReLU(0.2))\n",
     "discriminator.add(Dropout(0.3))\n",
     "discriminator.add(Dense(1, activation='sigmoid'))\n",
-    "discriminator.compile(loss=losses.binary_crossentropy, optimizer=adam)"
+    "discriminator.compile(\n",
+    "    loss=losses.binary_crossentropy, \n",
+    "    optimizer=optimizers.Adam(lr=0.0002, beta_1=0.5)\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ジェネレータとディスクリミネータの結合"
+    "## ジェネレータとディスクリミネータの結合\n",
+    "## (GAN生成)"
    ]
   },
   {
@@ -153,8 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ディスクリミネータは学習しない(GAN内でのディスクリミネータは学習させない)\n",
-    "# →ディスクリミネータの単独学習はさせる\n",
+    "# GAN内でのディスクリミネータは学習させない\n",
     "discriminator.trainable = False\n",
     "\n",
     "# ジェネレータ―の入力\n",
@@ -168,24 +202,10 @@
     "gan = Model(inputs=ganInput, outputs=ganOutput)\n",
     "\n",
     "# コンパイル\n",
-    "gan.compile(loss=losses.binary_crossentropy, optimizer=adam)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## それぞれの損失格納"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dLosses = []\n",
-    "gLosses = []"
+    "gan.compile(\n",
+    "    loss=losses.binary_crossentropy, \n",
+    "    optimizer=optimizers.Adam(lr=0.0002, beta_1=0.5)\n",
+    ")"
    ]
   },
   {
@@ -194,31 +214,8 @@
    "source": [
     "# 関数定義\n",
     "\n",
-    "+ 学習過程描画\n",
     "+ 生成画像描画\n",
     "+ モデル保存"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plotLoss():\n",
-    "    \"\"\"最終的な損失をプロット\n",
-    "    \"\"\"\n",
-    "    # 画像サイズ\n",
-    "    plt.figure(figsize=(10, 8))\n",
-    "    # 凡例\n",
-    "    plt.plot(dLosses, label='Discriminitive loss')\n",
-    "    plt.plot(gLosses, label='Generative loss')\n",
-    "    # 軸名\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.legend()\n",
-    "    # 保存\n",
-    "    plt.savefig('images/gan_loss_epoch.png')"
    ]
   },
   {
@@ -275,43 +272,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 学習\n",
-    "\n",
-    "いよいよジェネレータとディスクリミネータを「敵対的に」学習させていきます。\n",
-    "\n",
-    "## 学習順序\n",
-    "\n",
-    "### 1.実際のデータでベクトルを生成する→正解ラベルを1とする\n",
-    "\n",
-    "### 2.ジェネレータで偽ベクトルを生成する→正解ラベルを0とする\n",
-    "\n",
-    "### 3.上記2つ(1,2)のベクトルを用いて、ディスクリミネータを学習させる\n",
-    "\n",
-    "### 4.ベクトルをランダムに定義する→正解ラベルを1とする\n",
-    "\n",
-    "### 5.上記のベクトル(4)を用いて、先ほど生成したGANのディスクリミネータの学習をOFFにして、ジェネレータのみ学習させる\n",
-    "\n",
-    "**ディスクリミネータは、「ジェネレータが生成したベクトル」に対しては、0を出力するように学習している。**\n",
-    "\n",
-    "**ディスクリミネータは、「実際のベクトル」に対しては、1を出力するように学習している。**\n",
-    "\n",
-    "**しかし、**\n",
-    "\n",
-    "**ジェネレータの正解ラベルは1に設定してあるので、ジェネレータは、ディスクリミネータが「実際のベクトル」が入力されたと勘違いするように成長する**\n",
-    "\n",
-    "\n",
-    "<img src=\"./images/gan.png\"  width=\"80%\" style=\"position:relative;left:-10%;\">\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1537,16 +1501,18 @@
     }
    ],
    "source": [
-    "epochs=100\n",
+    "epochs=80\n",
+    "# 学習開始\n",
     "for e in range(epochs):\n",
     "    # 学習回数の描画\n",
     "    print('-'*15, 'Epoch %d' % e, '-'*15)\n",
+    "    # ミニバッチ処理(500回)\n",
     "    for _ in tqdm(range(500)):# 進捗状況の可視化\n",
     "        ########### 1\n",
     "        # ランダムにバッチ数の数だけ訓練データを取得(128×784)\n",
     "        img = X_train[np.random.randint(0, 60000, size=128)]\n",
     "        ########### 2\n",
-    "        # 生成したい画像の数の画像生成（128×100）\n",
+    "        # ランダムな入力ベクトルの作成（128×100）\n",
     "        noise = np.random.normal(0, 1, size=[128, 100])\n",
     "        # ジェネレータで画像を生成（128×784）\n",
     "        img_gen = generator.predict(noise)\n",
@@ -1561,29 +1527,20 @@
     "        discriminator.trainable = True\n",
     "        dloss = discriminator.train_on_batch(X, y)\n",
     "        ########### 4\n",
-    "        # 生成したい画像の数のベクトル生成（128×100）\n",
+    "        # ランダムな入力ベクトルの作成（128×100）\n",
     "        noise = np.random.normal(0, 1, size=[128, 100])\n",
     "        # ジェネレータの正解ラベル\n",
     "        y = np.ones(128)\n",
     "        ########### 5\n",
-    "        # ディスクリミネイタの学習をOFFにする\n",
-    "        discriminator.trainable = False\n",
-    "        # ジェネレータを学習させる\n",
+    "        # GANに入力する（ジェネレータを学習させる）\n",
     "        gloss = gan.train_on_batch(noise, y)\n",
-    "\n",
-    "    # ジェネレータとディスクリミネイターの損失を保存\n",
-    "    dLosses.append(dloss)\n",
-    "    gLosses.append(gloss)\n",
     "    \n",
     "    # 定期的に出力\n",
     "    if e % 20 == 0:\n",
     "        # ジェネレータ生成画像の出力\n",
     "        plotGeneratedImages(e)\n",
     "        # モデルの出力\n",
-    "        saveModels(e)\n",
-    "\n",
-    "# 学習過程の出力\n",
-    "plotLoss()"
+    "        saveModels(e)"
    ]
   },
   {
